--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: farsfunctions
-Type: Package
-Title: NHTSA FARS Functions
 Version: 0.1.0
-Author: M. McClendon
-Maintainer: mike.mcclendon@gmail.com
+Date: 2017-04-23
+Title: NHTSA FARS Functions
+Authors@R: c(person("Mike", "McClendon", role = c("aut", "cre"),email = "mike.mcclendon@gmail.com"))
+Author: Mike McClendon [aut, cre]
+Maintainer: Mike McClendon <mike.mcclendon@gmail.com>
+Depends: R (>= 3.1.0), nlme
+Suggests: dplyr, maps
 Description: Analyses data from NHTSA FARS incidents. Visualizes state by state maps of incidents.
-License: GPL-3
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 6.0.1
-Suggests: knitr, rmarkdown
-VignetteBuilder: knitr
+License: GPL (>= 2)
+URL: https://www.github.com/mikemcclendon
+BugReports: https://www.github.com/mikemcclendon
