--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,4 @@ Maintainer: Mike McClendon <mike.mcclendon@gmail.com>
 Description: Analyses data from NHTSA FARS incidents. Visualizes state by state maps of incidents.
 License: GPL (>= 2)
 URL: https://www.github.com/mikemcclendon
-
+Imports: dplyr, maps
