--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,4 @@ License: GPL (>= 2)
 URL: https://www.github.com/mikemcclendon
 Imports: dplyr, maps, readr, testthat
 RoxygenNote: 6.0.1
+LazyData: TRUE
