--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,18 @@ export("fars_summarize_years")
 export("fars_read_years")
 export("fars_map_state")
 
-import(dplyr)
-import(maps)
-import(testthat)
-import(readr)
+importFrom(readr,read_csv)
+importFrom(graphics,points)
+importFrom(maps,map)
+importFrom(stats,setNames)
+importFrom(tidyr,spread)
+importFrom(dplyr,select)
+importFrom(dplyr,summarize)
+importFrom(dplyr,tbl_df)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+
+
